Document how to run with module-path and how to create a jimage